--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
@@ -24,6 +25,7 @@
     "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
