--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/react-dom": "18.2.6",
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
+    "chakra-react-select": "^4.7.0",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "formik": "^2.4.2",
+    "formik": "^2.4.3",
     "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "react": "18.2.0",
