--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
+    "sanitize-html": "^2.11.0",
+    "slug": "^8.2.3",
     "typescript": "5.1.3",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.9.5"
   }
 }
