--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "chakra-react-select": "^4.7.0",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -30,6 +31,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^9.0.1",
     "react-toastify": "^9.1.3",
     "sanitize-html": "^2.11.0",
     "slug": "^8.2.3",
