--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.10.1",
     "react-markdown": "^9.0.1",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "sanitize-html": "^2.11.0",
     "slug": "^8.2.3",
     "typescript": "5.1.3",
