--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sanitize-html": "^2.11.0",
     "slug": "^8.2.3",
     "typescript": "5.1.3",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/sanitize-html": "^2.9.5"
