--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-datetime-picker": "^5.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-markdown": "^9.0.1",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
