--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.3",
     "framer-motion": "^10.12.18",
+    "langchain": "^0.1.34",
     "moment": "^2.29.4",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -42,6 +43,8 @@
     "slug": "^8.2.3",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.22.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
