--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "apexcharts": "^3.41.1",
+    "apexcharts": "^3.48.0",
     "axios": "^1.4.0",
     "chakra-react-select": "^4.7.0",
     "chakra-ui-markdown-renderer": "^4.1.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.2.2",
     "formik": "^2.4.3",
     "framer-motion": "^10.12.18",
     "langchain": "^0.1.34",
     "moment": "^2.29.4",
-    "next": "13.4.7",
-    "react": "18.2.0",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-datetime": "^3.2.0",
     "react-datetime-picker": "^5.6.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-file-resizer": "^0.4.8",
     "react-markdown": "^9.0.1",
