--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@langchain/community": "^0.2.13",
     "@supabase/supabase-js": "^2.33.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
@@ -27,9 +28,10 @@
     "eslint-config-next": "^14.2.2",
     "formik": "^2.4.3",
     "framer-motion": "^10.12.18",
-    "langchain": "^0.1.34",
+    "langchain": "^0.2.6",
     "moment": "^2.29.4",
     "next": "^14.2.2",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-datetime": "^3.2.0",
